# random

./: README.md  gp_julia.ipynb
acc2020_sde/: ex_cbf.m  ex_ricatti.m
coursera/upenn_perception/week1_code/: RoboticsPerceptionWeek1Submission.mat  compute_f_pos.m  compute_focal_length.m  run_dolly_zoom.m
coursera/upenn_perception/week2_code/: RoboticsPerceptionWeek2Submission.mat  warp_pts.m
coursera/upenn_perception/week3_code/: RoboticsPerceptionWeek3Submission.mat  ar_cube.m  est_homography.m  track_corners.m
coursera/upenn_perception/week4_code/: EssentialMatrixFromFundamentalMatrix.m  EstimateFundamentalMatrix.m  LinearPnP.m  LinearTriangulation.m  Nonlinear_Triangulation.m  RoboticsPerceptionWeek4Submission.mat  project.m  run_sfm.m
gtsam/: test_gtsam.cpp
julia/: SDE.ipynb  gp_julia.ipynb  julia_learning.ipynb
matlab/optimal_testing/: inCenter.m  sfun_plot2d.m  sim_test.slx
nn/: mnist_test.ipynb  nn.py  rnn.ipynb  test.py
opencv/: CMakeLists.txt  DisplayImage.cpp  PnP.cpp  Webcam_tracking.cpp  Webcam_yolo.cpp
pcl/: test_pcl.cpp
python/: SDE.ipynb  gaussian_process.ipynb  torch_reg2d.ipynb  torchvision.ipynb
python/sde/: SDE.ipynb  comparison.csv  sde_lib.py
